# django-find-view

./: README.rst  pyproject.toml  release.sh  setup.cfg
src/django_find_view/: __init__.py
